# rpi-imager-tui

./: .gitignore  Cargo.toml  PLAN.md  README.md  install.sh
.github/workflows/: release.yml
resources/: keyboards.csv  locales.txt  timezones.txt
src/: customization.rs  drivelist.rs  main.rs  os_list.rs  post_process.rs  static_data.rs  worker.rs  writer.rs
