[package]
name = "rpi-imager-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-compression = { version = "0.4.34", features = ["tokio", "xz", "gzip", "zstd"] }
bytes = "1.11.0"
crossterm = "0.29.0"
futures = "0.3.31"
hex = "0.4.3"
ratatui = "0.29.0"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["io"] }
